# BanguesesDraw

./: .gitignore  LICENSE  LICENSES.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: macos-build.yml  windows-build.yml
.superpowers/sdd/: task-4-report.md  task-5-report.md
docs/wireframes/: mermaid-canvas-mode.html  mermaid-flowchart-samples.html  mermaid-mode.html
scripts/: generate-designbuddy-icon.mjs
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: designs.rs  lib.rs  main.rs
src/components/: AiDiagramDialog.test.tsx  AiDiagramDialog.tsx  AiGenerationEstimate.tsx  AiModifyDialog.test.tsx  AiModifyDialog.tsx  AiSettingsDialog.tsx  ConfirmDialog.tsx  DesignList.test.tsx  DesignList.tsx  EditorView.test.tsx  EditorView.tsx  ExportMenu.tsx  LibraryView.test.tsx  LibraryView.tsx  MermaidEditorView.test.tsx  MermaidEditorView.tsx  NoteEditorView.test.tsx  NoteEditorView.tsx  ProjectSidebar.test.tsx  ProjectSidebar.tsx  RenameDialog.test.tsx  RenameDialog.tsx
src/hooks/: useAutosave.test.tsx  useAutosave.ts  useDesignLibrary.test.tsx  useDesignLibrary.ts
src/lib/: aiTokenBudget.test.ts  aiTokenBudget.ts  backupSettings.ts  designApi.test.ts  designApi.ts  excalidrawScene.test.ts  excalidrawScene.ts  excalidrawToDrawio.test.ts  excalidrawToDrawio.ts  mermaidToExcalidraw.test.ts  mermaidToExcalidraw.ts  noteContent.ts  (+2 more)
tests/: smoke.spec.ts
(+5 files in other folders)
