[package]
name = "banguesesdraw"
version = "0.1.0"
description = "Local Excalidraw design manager"
authors = ["BanguesesDraw"]
edition = "2021"

[lib]
name = "banguesesdraw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "1"
# Tauri 2.11.3 resolves cookie 0.18.1, whose parser does not compile against time 0.3.52.
time = "=0.3.44"
